k8s/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: action_man.web
  name: action-man-web
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
      app: action_man.web
